--- a/source/jupyter.Rmd
+++ b/source/jupyter.Rmd
@@ -1,4 +1,4 @@
-# Combining code and text with Jupyter {#getting-started-with-jupyter}
+# Combining code and text with Jupyter {#jupyter}
 
 ```{r jupyter-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
@@ -53,7 +53,7 @@ document. In this chapter, we will focus on the *use* of Jupyter notebooks to pr
 text via a web interface. 
 These skills are essential to getting your analysis running; think of it like getting dressed in the morning!
 Note that we assume that you already have Jupyter set up and ready to use. If that is not the case, please first read
-Chapter \@ref(move-to-your-own-machine) to learn how to install and configure Jupyter on your own
+Chapter \@ref(setup) to learn how to install and configure Jupyter on your own
 computer. 
 
 ## Chapter learning objectives
@@ -96,7 +96,7 @@ this book as part of a course, your instructor may have a JupyterHub
 already set up for you to use! <!--- Insert link to public JupyterHub here if we can get 
 access/permission (either 2i2c collaboration, or 
 https://notebooks.gesis.org/hub/home) --> Jupyter can also be installed on your
-own computer; see Chapter \@ref(move-to-your-own-machine) for instructions.
+own computer; see Chapter \@ref(setup) for instructions.
 
 ## Code cells
 
