--- a/source/preface.Rmd
+++ b/source/preface.Rmd
@@ -25,7 +25,7 @@ six chapters, you will learn how to answer predictive, exploratory, and inferent
 data analysis questions with common methods in data science, including
 classification, regression, clustering, and estimation.
 In the final chapters 
-(\@ref(getting-started-with-jupyter)&ndash;\@ref(move-to-your-own-machine)), 
+(\@ref(jupyter)&ndash;\@ref(setup)), 
 you will learn how to combine R code, formatted text, and images
 in a single coherent document with Jupyter, use version control for
 collaboration, and install and configure the software needed for data science
@@ -51,5 +51,5 @@ For each worksheet, you can either launch an interactive version of the workshee
 or preview a non-interactive version of the worksheet by clicking "view worksheet."
 If you instead decide to download the worksheet and run it on your own machine,
 make sure to follow the instructions for computer setup
-found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
+found in Chapter \@ref(setup). This will ensure that the automated feedback
 and guidance that the worksheets provide will function as intended.
