--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -1,4 +1,4 @@
-# Setting up your computer {#move-to-your-own-machine}
+# Setting up your computer {#setup}
 
 ```{r setup-machine-setup, include = FALSE}
 library(tidyverse)
@@ -47,7 +47,7 @@ In order to save your progress, you will need to download the worksheets to your
 work on them locally. You can download the worksheets as a compressed zip file 
 using [the link at the top of the page](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets/archive/refs/heads/main.zip).
 Once you unzip the downloaded file, you will have a folder containing all of the Jupyter notebook worksheets
-accompanying this book. See Chapter \@ref(getting-started-with-jupyter) for
+accompanying this book. See Chapter \@ref(jupyter) for
 instructions on working with Jupyter notebooks.
 
 ## Working with Docker
@@ -207,7 +207,7 @@ you may not end up with the right versions of all the R packages needed for the 
 *guarantees* that the worksheets will work exactly as intended. 
 
 In this section, we will cover how to install JupyterLab Desktop,
-Git and the JupyterLab Git extension (for version control, as discussed in Chapter \@ref(Getting-started-with-version-control)), and 
+Git and the JupyterLab Git extension (for version control, as discussed in Chapter \@ref(version-control)), and 
 all of the R packages needed to run
 the code in this book.
 \index{git!installation}\index{JupyterLab Desktop}
