--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -1,4 +1,4 @@
-# Collaboration with version control {#Getting-started-with-version-control}
+# Collaboration with version control {#version-control}
 
 ```{r 12-getting-started-with-version-control, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
@@ -465,7 +465,7 @@ can be done by creating and working in a local copy of the repository.
 In this chapter, we focus on interacting with Git via Jupyter using
 the Jupyter Git extension. The Jupyter Git \index{git!Jupyter extension} extension
 can be run by Jupyter on your local computer, or on a JupyterHub server. 
-*Note: we recommend reading Chapter \@ref(getting-started-with-jupyter)* 
+*Note: we recommend reading Chapter \@ref(jupyter)* 
 *to learn how to use Jupyter before reading this chapter.*
 
 ### Generating a GitHub personal access token
@@ -934,7 +934,7 @@ You can launch an interactive version of the worksheet in your browser by clicki
 You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
 If you instead decide to download the worksheet and run it on your own machine,
 make sure to follow the instructions for computer setup
-found in Chapter \@ref(move-to-your-own-machine). This will ensure that the automated feedback
+found in Chapter \@ref(setup). This will ensure that the automated feedback
 and guidance that the worksheets provide will function as intended.
 
 ## Additional resources {#vc-add-res}
