get rid of random emph note and replace with a regular sentence

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -465,8 +465,8 @@ can be done by creating and working in a local copy of the repository.
 In this chapter, we focus on interacting with Git via Jupyter using
 the Jupyter Git extension. The Jupyter Git \index{git!Jupyter extension} extension
 can be run by Jupyter on your local computer, or on a JupyterHub server. 
-*Note: we recommend reading Chapter \@ref(jupyter)* 
-*to learn how to use Jupyter before reading this chapter.*
+We recommend reading Chapter \@ref(jupyter) to learn how
+to use Jupyter before reading this chapter.
 
 ### Generating a GitHub personal access token
 
