fix M->Malignant, B->Benign causing missing rendered numbers

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1438,8 +1438,8 @@ prediction <- predict(knn_fit, new_observation)
 prediction
 ```
 
-The classifier predicts that the first observation is benign ("B"), while the second is
-malignant ("M"). Figure \@ref(fig:05-workflow-plot-show) visualizes the predictions that this 
+The classifier predicts that the first observation is benign, while the second is
+malignant. Figure \@ref(fig:05-workflow-plot-show) visualizes the predictions that this 
 trained $K$-nearest neighbor model will make on a large range of new observations.
 Although you have seen colored prediction map visualizations like this a few times now,
 we have not included the code to generate them, as it is a little bit complicated.
