--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -410,8 +410,8 @@ train_prop <- cancer_train |>
 ```
 
 We can use `group_by` and `summarize` to \index{group\_by}\index{summarize} find the percentage of malignant and benign classes 
-in `cancer_train` and we see about `r round(filter(train_prop, Class == "B")$proportion, 2)*100`% of the training
-data are benign and `r round(filter(train_prop, Class == "M")$proportion, 2)*100`% 
+in `cancer_train` and we see about `r round(filter(train_prop, Class == "Benign")$proportion, 2)*100`% of the training
+data are benign and `r round(filter(train_prop, Class == "Malignant")$proportion, 2)*100`% 
 are malignant, indicating that our class proportions were roughly preserved when we split the data.
 
 ```{r 06-train-proportion}
@@ -591,7 +591,7 @@ cancer_proportions
 
 ```{r 06-proportions-2, echo = FALSE, warning = FALSE}
 cancer_propn_1 <- cancer_proportions |>
-                filter(Class == 'B') |>
+                filter(Class == 'Benign') |>
                 select(percent)
 ```
 
