fix inconsistent subheading in scraping/api

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -1055,7 +1055,7 @@ Now that we have the CSS selectors that describe the properties of the elements
 that we want to target, we can use them to find
 certain elements in web pages and extract data. 
 
-**Using `rvest`**
+#### Using `rvest` {-}
 
 Now that we have our CSS selectors we can use the `rvest` R package \index{rvest} to scrape our
 desired data from the website. We start by loading the `rvest` package:
@@ -1199,7 +1199,7 @@ Be careful not to overrun your quota! In this example, we should take a look at
  [the Twitter website](https://developer.twitter.com/en/docs/twitter-api/rate-limits) to see what limits
 we should abide by when using the API. 
 
-**Using `rtweet`**
+#### Using `rtweet` {-}
 
 After checking the Twitter website, it seems like asking for 400 tweets one time is acceptable.
 So we can use the `get_timelines` function to ask for the last 400 tweets from the [\@tidyverse](https://twitter.com/tidyverse) account.
