remove redundant text

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -1052,13 +1052,12 @@ td:nth-child(7),
 ```
 
 Now that we have the CSS selectors that describe the properties of the elements
-that we want to target, we can use them to find
-certain elements in web pages and extract data. 
+that we want to target, we can use them to find certain elements in web pages and extract data.
 
 #### Using `rvest` {-}
 
-Now that we have our CSS selectors we can use the `rvest` R package \index{rvest} to scrape our
-desired data from the website. We start by loading the `rvest` package:
+We will use the `rvest` R package \index{rvest} to scrape data from the Wikipedia page.
+We start by loading the `rvest` package:
 
 ```{r 01-load-rvest}
 library(rvest)
