minor wordsmith fwd sel start

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -1378,12 +1378,9 @@ Therefore we will continue the rest of this section using forward selection.
  
 We now turn to implementing forward selection in R.
 Unfortunately there is no built-in way to do this using the `tidymodels` framework,
-so we will have to code it ourselves. First we will use the `select` function
-to extract the "total" set of predictors that we are willing to work with. 
-Here we will load the modified version of the cancer data with irrelevant 
-predictors, and select `Smoothness`, `Concavity`, `Perimeter`, `Irrelevant1`, `Irrelevant2`, and `Irrelevant3`
-as potential predictors, and the `Class` variable as the label.
-We will also extract the column names for the full set of predictor variables.
+so we will have to code it ourselves. First we will use the `select` function to extract a smaller set of predictors
+to work with in this illustrative example&mdash;`Smoothness`, `Concavity`, `Perimeter`, `Irrelevant1`, `Irrelevant2`, and `Irrelevant3`&mdash;as
+well as the `Class` variable as the label. We will also extract the column names for the full set of predictors.
 
 ```{r 06-fwdsel-seed, echo = FALSE, warning = FALSE, message = FALSE}
 # hidden seed
