--- a/source/references.bib
+++ b/source/references.bib
@@ -180,11 +180,11 @@
   year = {2021},
   url = {https://rvest.tidyverse.org/}}
 
-@Manual{rtweet,
-  title = {{rtweet R package}},
-  author = {Michael Kearney},
-  year = {2019},
-  url = {https://github.com/ropensci/rtweet}}
+@Manual{httr2,
+  title = {httr2: Perform HTTP Requests and Process the Responses},
+  author = {Hadley Wickham},
+  year = {2023},
+  url = {https://httr2.r-lib.org}}
 
 @article{wickham2019tidverse,
     title = {Welcome to the {tidyverse}},
@@ -429,3 +429,11 @@
   year = {2019},
   publisher = {OpenIntro, Inc.},
   url = {https://openintro.org/book/os/}}
+
+@article{rhoophiuchi,
+  title = {Rho Ophiuchi cloud complex},
+  author = {{NASA} and {ESA} and {CSA} and {STScI} and {K. Pontoppidan (STScI)} and {A. Pagan (STScI)}},
+  year = {2023},
+  journal={URL: https://esawebb.org/images/weic2316a/}}
+
+
