--- a/source/acknowledgments.Rmd
+++ b/source/acknowledgments.Rmd
@@ -12,6 +12,8 @@ list of topics in this book. We would especially like to thank Matías
 Salibían-Barrera for his mentorship during the initial development and roll-out
 of both DSCI 100 and this book. His door was always open when
 we needed to chat about how to best introduce and teach data science to our first-year students.
+We would also like to thank Gabriela Cohen Freue for her DSCI 561 (Regression I) teaching materials
+from the UBC Master of Data Science program, as some of our linear regression figures were inspired from these.
 
 We would also like to thank all those who contributed to the process of 
 publishing this book. In particular, we would like to thank all of our reviewers for their feedback and suggestions:
